--- a/style.css
+++ b/style.css
@@ -1,52 +1,49 @@
 body {
-	background-color: #D9E3F0;
-	margin: 0;
-	padding: 0;
-	font-family: Arial, sans-serif;
+  background-color: #ffccff;
+  background-image: url("https://i.imgur.com/YDobrhm.gif");
+  color: #6600cc;
+  font-size: 24px;
 }
 
 .container {
-	background-color: #F9FBFC;
-	border-radius: 10px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	padding: 50px;
-	margin: 50px auto;
-	max-width: 500px;
-	text-align: center;
+  background-color: #ffffcc;
+  border: 10px solid #ff9900;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #888888;
+  margin: 100px auto;
+  max-width: 800px;
+  padding: 50px;
+  text-align: center;
 }
 
 h1 {
-	color: #0047AB;
+  color: #ff9900;
+  font-family: Impact, Charcoal, sans-serif;
+  font-size: 48px;
+  letter-spacing: 10px;
+  margin-bottom: 50px;
+  text-shadow: 3px 3px #6600cc;
 }
 
-form {
-	margin-top: 20px;
-	text-align: center;
+.btn {
+  background-color: #ff9900;
+  border: 3px solid #6600cc;
+  border-radius: 10px;
+  color: #ffffcc;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Arial, sans-serif;
+  font-size: 24px;
+  margin-top: 50px;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-shadow: 2px 2px #6600cc;
+  transition: all 0.2s ease-in-out;
 }
 
-label {
-	display: block;
-	margin-bottom: 5px;
-	color: #666;
-}
-
-input[type=email] {
-	width: 100%;
-	padding: 10px;
-	border-radius: 5px;
-	border: none;
-	margin-bottom: 20px;
-}
-
-input[type=submit] {
-	background-color: #0047AB;
-	color: #FFF;
-	border: none;
-	padding: 10px 20px;
-	border-radius: 5px;
-	cursor: pointer;
-}
-
-input[type=submit]:hover {
-	background-color: #002E66;
+.btn:hover {
+  background-color: #6600cc;
+  border-color: #ff9900;
+  color: #ff9900;
+  text-shadow: 2px 2px #ffffcc;
 }
